# biip-parallel

./: .gitignore  CMakeLists.txt  Makefile  biip.cpp  runner.py
biip_original/: biip.cpp
data/: GSE1000_series_matrix-gurobi.txt  all_gene_disease_associations-gurobi-Angiomyolipoma_kidney.txt  all_gene_disease_associations-gurobi-Female_Breast_Carcinoma.txt  all_gene_disease_associations-gurobi-Hormone refractory prostate cancer.txt  all_gene_disease_associations-gurobi-Maternal hypertension.txt  all_gene_disease_associations-gurobi-Pancreatic_Ductal_Adenocarcinoma.txt  all_gene_disease_associations-gurobi-Taste sweet.txt  all_gene_disease_associations-gurobi-Thrombotic stroke.txt  all_gene_disease_associations-gurobi.txt  ath_MetabolicMap_NASC_734_69-gurobi.txt  disease-gene-Boh2007-s2-gurobi.txt  drug-target-Yildirim2007-s2-gurobi.txt  drug-therapy-Nacher2008-s4-gurobi.txt  human_4026_96-gurobi.txt  input.txt  rel-gurobi.txt  yeast_GOEnrichment_Gasch2000_2944_173-gurobi.txt
results/: biip.csv  biip_parallel_4.csv  biip_parallel_8.csv  input.csv  results.xlsx
